--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "main": "./lib",
   "dependencies": {
     "aws-sdk": "2.785.0",
+    "is-image": "^3.0.0",
     "lodash": "4.17.19"
   },
   "strapi": {
@@ -47,5 +48,8 @@
   "scripts": {
     "test": "echo \"no tests yet\""
   },
-  "gitHead": "231263a3535658bab1e9492c6aaaed8692d62a53"
+  "gitHead": "231263a3535658bab1e9492c6aaaed8692d62a53",
+  "devDependencies": {
+    "jest": "^26.6.3"
+  }
 }
